css: styling main

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <main>
-        <h1>I'm Vish, a full-stack software engineer.</h1>
-        <p>Let's see how I can help you with your web presence of software development needs.</p>
+        <h1>I'm <span>Vish</span>, a full-stack software engineer.</h1>
+        <p>Let's see how I can help you with your web presence or software development needs.</p>
         <section>
             <button>I need a website</button>
             <button>I need a developer</button>
