css: added .divider-1. added basic element styles

--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
             <button>I need a developer</button>
         </section>
     </main>
+
+    <div class="divider-1"></div>
+
+    <section class="services">
+        <h2>Is your web presence working for you?</h2>
+        <p>If someone needs what you provide, will your website draw them in? What will they see if they are on their phone? A responsive & accessible web presence is no longer merely a 'bonus' or 'nice to have' - it is essential.</p>
+        <p>It is my privilege to offer a chance to be seen on the web to small businesses and individuals around me. Whether that be creating a website for you from the ground up, or updating an existing presence for the mobile age. Providing a place for interested parties to find and learn about what you offer is what I offer. How can I help you today?</p>
+    </section>
 </body>
 </html>
