added .websites and .applications to html. added .container class to css and html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <main class="container">
         <h1>I'm <span>Vish</span>, a full-stack software engineer.</h1>
         <p>Let's see how I can help you with your web presence or software development needs.</p>
         <section>
@@ -19,12 +19,20 @@
 
     <div class="divider-1"></div>
 
-    <section class="services">
+    <section class="container services">
         <h2>Is your web presence working for you?</h2>
         <p>If someone needs what you provide, will your website draw them in? What will they see if they are on their phone? A responsive & accessible web presence is no longer merely a 'bonus' or 'nice to have' - it is essential.</p>
         <p>It is my privilege to offer a chance to be seen on the web to small businesses and individuals around me. Whether that be creating a website for you from the ground up, or updating an existing presence for the mobile age. Providing a place for interested parties to find and learn about what you offer is what I offer. How can I help you today?</p>
     </section>
 
     <div class="divider-2"></div>
+
+    <section class="container websites">
+        <h2>WEBSITES</h2>
+    </section>
+
+    <section class="container applications">
+        <h2>APPLICATIONS</h2>
+    </section>
 </body>
 </html>
