drafted index.js. added #work-btn button with event listener that toggles button text when clicked

--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
 
     <div class="divider-2"></div>
 
-    <section class="container websites">
-        <h2>WEBSITES</h2>
+    <section class="container my-work">
+        <button id="work-btn" type="button">SEE APPLICATIONS</button>
+
+        <section id="websites" class="websites">
+            <h2>WEBSITES</h2>
+        </section>
+    
+        <section id="applications" class="applications hidden">
+            <h2>APPLICATIONS</h2>
+        </section>
     </section>
 
-    <section class="container applications">
-        <h2>APPLICATIONS</h2>
-    </section>
+    <script src="index.js"></script>
 </body>
 </html>
