updated copy in .services

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <div class="divider-1"></div>
 
     <section class="container services">
-        <h2>Is your web presence working for you?</h2>
-        <p>If someone needs what you provide, will your website draw them in? What will they see if they are on their phone? A responsive & accessible web presence is no longer merely a 'bonus' or 'nice to have' - it is essential.</p>
-        <p>It is my privilege to offer a chance to be seen on the web to small businesses and individuals around me. Whether that be creating a website for you from the ground up, or updating an existing presence for the mobile age. Providing a place for interested parties to find and learn about what you offer is what I offer. How can I help you today?</p>
+        <h2>Transform Your Online Presence with a Personal Touch</h2>
+        <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web—it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
+        <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new website or application built from the ground up, or a refresh to make your current site or app mobile-friendly and accessible, I'm here to bring your vision to life.</p>
+        <p>Let’s create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
     </section>
 
     <div class="divider-2"></div>
