--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <main class="container">
-        <h1>I'm <span>Vish</span>, a full-stack software engineer.</h1>
+        <!-- <h1>I'm <span>Vish</span>, a full-stack software engineer.</h1> -->
+        <h1>I'm <span>Vish</span>, a software engineer specializing in web development.</h1>
         <p>Let's see how I can help you with your web presence or software development needs.</p>
         <section>
             <button>I need a website</button>
