--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 </head>
 <body>
     <main class="container">
-        <!-- <h1>I'm <span>Vish</span>, a full-stack software engineer.</h1> -->
         <h1>I'm <span>Vish</span>, a software engineer specializing in web development.</h1>
         <p>Let's see how I can help you with your web presence or software development needs.</p>
-        <section>
+        <!-- <section>
             <button>I need a website</button>
             <button>I need a developer</button>
-        </section>
+        </section> -->
     </main>
 
     <div class="divider-1"></div>
 
-    <section class="container services">
+    <section class="container pitch">
         <h2>Transform Your Online Presence with a Personal Touch</h2>
         <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web—it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
         <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new website or application built from the ground up, or a refresh to make your current site or app mobile-friendly and accessible, I'm here to bring your vision to life.</p>
@@ -30,7 +29,8 @@
     <div class="divider-2"></div>
 
     <section class="container my-work">
-        <button id="work-btn" type="button">SEE APPLICATIONS</button>
+        <button id="web-btn" type="button">SEE WEBSITES</button>
+        <button id="app-btn" type="button">SEE APPLICATIONS</button>
 
         <section id="websites" class="websites">
             <h2>WEBSITES</h2>
