--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container">
-        <h1>I'm <span>Vish</span>, a software engineer specializing in web development.</h1>
+        <h1>I'm <span class="bold">Vish</span>, a software engineer specializing in web development.</h1>
         <p>Let's see how I can help you with your web presence or software development needs.</p>
         <!-- <section>
             <button>I need a website</button>
@@ -21,16 +21,21 @@
 
     <section class="container pitch">
         <h2>Transform Your Online Presence with a Personal Touch</h2>
-        <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web—it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
-        <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new website or application built from the ground up, or a refresh to make your current site or app mobile-friendly and accessible, I'm here to bring your vision to life.</p>
+        <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web — it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
+        <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new <span class="bold">website</span> or <span class="bold">application</span> built from the ground up, or a refresh to make your current site or app <span class="bold">mobile-friendly</span> and <span class="bold">accessible</span>, I'm here to bring your vision to life.</p>
         <p>Let’s create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
     </section>
 
     <div class="divider-2"></div>
 
     <section class="container my-work">
-        <button id="web-btn" type="button">SEE WEBSITES</button>
-        <button id="app-btn" type="button">SEE APPLICATIONS</button>
+        <h2>See some of my work</h2>
+        <p>Here are some <span class="bold">websites</span> and <span class="bold">applications</span> that I've built.</p>
+        <p> Click to visit them!</p>
+        <section class="work-buttons">
+            <button id="web-btn" type="button">SEE WEBSITES</button>
+            <button id="app-btn" type="button">SEE APPLICATIONS</button>
+        </section>
 
         <section id="websites" class="websites">
             <h2>WEBSITES</h2>
