imported font awesome and added social media icons to .social in main

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <title>Vish Singh - Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/788b6b1728.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container">
         <h1>I'm <span class="bold">Vish</span>, a software engineer specializing in web development.</h1>
         <p>Let's see how I can help you with your web presence or software development needs.</p>
-        <!-- <section>
-            <button>I need a website</button>
-            <button>I need a developer</button>
-        </section> -->
+
+        <section class="social">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vish213/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/vishalicious213" title="GitHub"><i class="fab fa-github"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://neophyte.home.blog/" title="Wordpress"><i class="fab fa-wordpress"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail"><i class="fas fa-envelope"></i></a>
+        </section>
     </main>
 
     <div class="divider-1"></div>
