--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
         <p>Let's see how I can help you with your web presence or software development needs.</p>
 
         <section class="social">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vish213/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://github.com/vishalicious213" title="GitHub"><i class="fab fa-github"></i></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://neophyte.home.blog/" title="Wordpress"><i class="fab fa-wordpress"></i></a>
-            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter"><i class="fab fa-twitter"></i></a>
-            <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail"><i class="fas fa-envelope"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vish213/" title="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/vishalicious213" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://neophyte.home.blog/" title="Wordpress">
+                <i class="fab fa-wordpress"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail">
+                <i class="fas fa-envelope"></i>
+            </a>
         </section>
     </main>
 
