added .services section. renamed previous .services to .pitch a few commits ago

--- a/index.html
+++ b/index.html
@@ -53,12 +53,18 @@
         </section>
 
         <section id="websites" class="websites">
-            <h2>WEBSITES</h2>
+            <h3>--websites--</h3>
         </section>
     
         <section id="applications" class="applications hidden">
-            <h2>APPLICATIONS</h2>
+            <h3>--applications--</h3>
         </section>
+    </section>
+
+    <div class="divider-1"></div>
+
+    <section class="container services">
+        <h2>My services</h2>
     </section>
 
     <script src="index.js"></script>
