updated #websites and #applications with .gallery class in event listeners

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
-        <section id="websites" class="websites">
+        <section id="websites">
             <h3>--websites--</h3>
         </section>
     
-        <section id="applications" class="applications hidden">
+        <section id="applications" class="hidden">
             <h3>--applications--</h3>
         </section>
     </section>
