--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
-        <section id="websites">
+        <section id="websites" class="gallery">
             <h3>--websites--</h3>
         </section>
     
@@ -65,6 +65,9 @@
 
     <section class="container services">
         <h2>My services</h2>
+        <p>I will bring your vision to life with mobile-friendly, responsive websites and applications that not only look great but deliver real value to your business.</p>
+        <p>My focus is on creating digital experiences that engage your audience, streamline your operations, and ultimately drive growth.</p>
+        <p>Let's work together to turn your ideas into impactful solutions that help your business thrive.</p>
     </section>
 
     <script src="index.js"></script>
