updated .services copy

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
     <section class="container services">
         <h2>My services</h2>
-        <p>I will bring your vision to life with mobile-friendly, responsive websites and applications that not only look great but deliver real value to your business.</p>
-        <p>My focus is on creating digital experiences that engage your audience, streamline your operations, and ultimately drive growth.</p>
-        <p>Let's work together to turn your ideas into impactful solutions that help your business thrive.</p>
+        <p>I will bring your vision to life with <span class="bold">mobile-friendly</span>, <span class="bold">responsive</span> websites and applications that not only look great but deliver real <span class="bold">value</span> to your business.</p>
+        <p>My focus is on creating digital experiences that <span class="bold">engage</span> your audience, <span class="bold">streamline</span> your operations, and ultimately <span class="bold">drive growth</span>.</p>
+        <p>Let's work together to turn your ideas into impactful solutions that help your business thrive!</p>
     </section>
 
     <script src="index.js"></script>
