added .process ol to .services

--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
         <p>I will bring your vision to life with <span class="bold">mobile-friendly</span>, <span class="bold">responsive</span> websites and applications that not only look great but deliver real <span class="bold">value</span> to your business.</p>
         <p>My focus is on creating digital experiences that <span class="bold">engage</span> your audience, <span class="bold">streamline</span> your operations, and ultimately <span class="bold">drive growth</span>.</p>
         <p>Let's work together to turn your ideas into impactful solutions that help your business thrive!</p>
+
+        <h3>Process</h3>
+        <ol class="process">
+            <li>
+                <h4>Consultation</h4>
+                <span>It all begins with a conversation where we'll pinpoint what this project is all about.</span>
+            </li>
+            <li>
+                <h4>Proposal & Contract</h4>
+                <span>A detailed project proposal including a visual preview will be presented and a plan of action will be decided.</span>
+            </li>
+            <li>
+                <h4>Creation</h4>
+                <span>Clients receive regular updates regarding their project status while I create and test it.</span>
+            </li>
+            <li>
+                <h4>Launch & Support</h4>
+                <span>Peace of mind is delivered with the final project in the form of available ongoing support.</span>
+            </li>
+        </ol>
     </section>
 
     <script src="index.js"></script>
