updated .process copy

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <ol class="process">
             <li>
                 <h4>Consultation</h4>
-                <span>It all begins with a conversation where we'll pinpoint what this project is all about.</span>
+                <span class="process-point">Our journey starts with a friendly conversation where we'll explore your ideas and define the <span class="bold">goals</span> for your project. This is where we get on the same page about what you envision.</span>
             </li>
             <li>
                 <h4>Proposal & Contract</h4>
-                <span>A detailed project proposal including a visual preview will be presented and a plan of action will be decided.</span>
+                <span class="process-point">Next, I'll present a detailed project proposal, complete with a visual mock-up of your new site or app. Together, we'll finalize the <span class="bold">plan of action</span> to bring your vision to life.</span>
             </li>
             <li>
                 <h4>Creation</h4>
-                <span>Clients receive regular updates regarding their project status while I create and test it.</span>
+                <span class="process-point">As I design and build your project, you'll receive <span class="bold">regular updates</span>, so you're always in the loop. Your feedback is key as we move from concept to reality.</span>
             </li>
             <li>
                 <h4>Launch & Support</h4>
-                <span>Peace of mind is delivered with the final project in the form of available ongoing support.</span>
+                <span class="process-point">When your project is ready to go live, I'll ensure everything runs smoothly. Plus, you'll have <span class="bold">peace of mind</span> knowing that ongoing support is available whenever you need it.</span>
             </li>
         </ol>
     </section>
