adding .about-me copy

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
         </ol>
     </section>
 
+    <div class="divider-2"></div>
+
+    <section class="container about-me">
+        <h2>I'm a software engineer operating from the Los Angeles area</h2>
+        <p>... and a 2020 transplant from the Empire State.</p>
+        <p>I've worked in healthtech for the majority of my career, designing and building groundbreaking electronic medical record software for long-term care facilities.</p>
+        <p>I enjoy the creative aspects of building websites and web applications. User interfaces, in particular, fascinate me.</p>
+    </section>
+
     <script src="index.js"></script>
 </body>
 </html>
