--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <p>... and a 2020 transplant from the Empire State.</p>
         <p>I've worked in healthtech for the majority of my career, designing and building groundbreaking electronic medical record software for long-term care facilities.</p>
         <p>I enjoy the creative aspects of building websites and web applications. User interfaces, in particular, fascinate me.</p>
+        <p>When I'm not behind a keyboard, I torture my kids with unappreciated dad jokes and home cooking that'll never compare to Chicken McNuggets. During downtime, I enjoy electric bass (it's not a guitar!), attending live shows ranging from experimental jazz to extreme metal and taiko drumming, plumbing the depths of LA's food scene and bemoaning the distance where the NY food scene now lies.</p> 
+        <p>Prior to books about code, I read an assortment of fantasy, sci-fi, horror, folktales, mythology, science, cultural and sociological stuff and blogged more. I also work out less than I should and walk 5k's irregularly.</p>
     </section>
 
     <script src="index.js"></script>
