updated .about-me copy

--- a/index.html
+++ b/index.html
@@ -93,12 +93,10 @@
     <div class="divider-2"></div>
 
     <section class="container about-me">
-        <h2>I'm a software engineer operating from the Los Angeles area</h2>
-        <p>... and a 2020 transplant from the Empire State.</p>
-        <p>I've worked in healthtech for the majority of my career, designing and building groundbreaking electronic medical record software for long-term care facilities.</p>
-        <p>I enjoy the creative aspects of building websites and web applications. User interfaces, in particular, fascinate me.</p>
-        <p>When I'm not behind a keyboard, I torture my kids with unappreciated dad jokes and home cooking that'll never compare to Chicken McNuggets. During downtime, I enjoy electric bass (it's not a guitar!), attending live shows ranging from experimental jazz to extreme metal and taiko drumming, plumbing the depths of LA's food scene and bemoaning the distance where the NY food scene now lies.</p> 
-        <p>Prior to books about code, I read an assortment of fantasy, sci-fi, horror, folktales, mythology, science, cultural and sociological stuff and blogged more. I also work out less than I should and walk 5k's irregularly.</p>
+        <h2>I'm a software engineer based in Los Angeles, originally from New York.</h2>
+        <p>With a background in healthtech, I've spent most of my career designing innovative electronic medical record software for long-term care facilities.</p>
+        <p>I love the creative side of building websites and web apps, especially when it comes to user interfaces.</p>
+        <p>Outside of work, I'm a dad joke enthusiast, an electric bass player (not a guitarist!), and a fan of live shows—from experimental jazz to extreme metal. I'm also a foodie exploring LA's vibrant scene, though I miss the tastes of NY. When I'm not coding, you might find me diving into a good sci-fi novel or attempting a 5k.</p>
     </section>
 
     <script src="index.js"></script>
