added .contact section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         <p>Outside of work, I'm a dad joke enthusiast, an electric bass player (not a guitarist!), and a fan of live shows—from experimental jazz to extreme metal. I'm also a foodie exploring LA's vibrant scene, though I miss the tastes of NY. When I'm not coding, you might find me diving into a good sci-fi novel or attempting a 5k.</p>
     </section>
 
+    <div class="divider-1"></div>
+
+    <section class="container contact"></section>
+
     <script src="index.js"></script>
 </body>
 </html>
