added .contact intro text

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
 
     <div class="divider-1"></div>
 
-    <section class="container contact"></section>
+    <section class="container contact">
+        <h2>Get in touch</h2>
+        <p>Got some great food recommendations? I’m all ears — and taste buds!</p>
+        <p>I’m also open to new clients, projects, and opportunities. If your company is looking to grow its software engineering team, let’s connect!</p>
+    </section>
 
     <script src="index.js"></script>
 </body>
