--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
         </form>
     </section>
 
+    <div class="divider-2"></div>
+
+    <footer>© 2024, Vish Singh</footer>
+
     <script src="index.js"></script>
 </body>
 </html>
