added /img/vish.jpg. added image to .about-me

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     <div class="divider-2"></div>
 
     <section class="container about-me">
+        <div class="img-container">
+            <img src="img/vish.jpg" alt="Vish Singh">
+        </div>
         <h2>I'm a software engineer based in Los Angeles, originally from New York.</h2>
         <p>With a background in healthtech, I've spent most of my career designing innovative electronic medical record software for long-term care facilities.</p>
         <p>I love the creative side of building websites and web apps, especially when it comes to user interfaces.</p>
