added media query @ 640px. styled form at that width

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section class="container my-work">
         <h2>See some of my work</h2>
-        <p>Here are some <span class="bold">websites</span> and <span class="bold">applications</span> that I've built.</p>
+        <p>Here are some of my <span class="bold">websites</span> and <span class="bold">applications</span>.</p>
         <p> Click to visit them!</p>
         <section class="work-buttons">
             <button id="web-btn" type="button">SEE WEBSITES</button>
@@ -139,7 +139,7 @@
                 />
             </div>
 
-            <div className='form-half'>
+            <div class='form-half'>
                 <label for='message'>MESSAGE</label>
                 <textarea 
                     id="message"
