added .inner-container class to .services  @ 720px

--- a/index.html
+++ b/index.html
@@ -64,30 +64,32 @@
     <div class="divider-1"></div>
 
     <section class="container services">
-        <h2>My services</h2>
-        <p>I will bring your vision to life with <span class="bold">mobile-friendly</span>, <span class="bold">responsive</span> websites and applications that not only look great but deliver real <span class="bold">value</span> to your business.</p>
-        <p>My focus is on creating digital experiences that <span class="bold">engage</span> your audience, <span class="bold">streamline</span> your operations, and ultimately <span class="bold">drive growth</span>.</p>
-        <p>Let's work together to turn your ideas into impactful solutions that help your business thrive!</p>
-
-        <h3>Process</h3>
-        <ol class="process">
-            <li>
-                <h4>Consultation</h4>
-                <span class="process-point">Our journey starts with a friendly conversation where we'll explore your ideas and define the <span class="bold">goals</span> for your project. This is where we get on the same page about what you envision.</span>
-            </li>
-            <li>
-                <h4>Proposal & Contract</h4>
-                <span class="process-point">Next, I'll present a detailed project proposal, complete with a visual mock-up of your new site or app. Together, we'll finalize the <span class="bold">plan of action</span> to bring your vision to life.</span>
-            </li>
-            <li>
-                <h4>Creation</h4>
-                <span class="process-point">As I design and build your project, you'll receive <span class="bold">regular updates</span>, so you're always in the loop. Your feedback is key as we move from concept to reality.</span>
-            </li>
-            <li>
-                <h4>Launch & Support</h4>
-                <span class="process-point">When your project is ready to go live, I'll ensure everything runs smoothly. Plus, you'll have <span class="bold">peace of mind</span> knowing that ongoing support is available whenever you need it.</span>
-            </li>
-        </ol>
+        <div class="inner-container">
+            <h2>My services</h2>
+            <p>I will bring your vision to life with <span class="bold">mobile-friendly</span>, <span class="bold">responsive</span> websites and applications that not only look great but deliver real <span class="bold">value</span> to your business.</p>
+            <p>My focus is on creating digital experiences that <span class="bold">engage</span> your audience, <span class="bold">streamline</span> your operations, and ultimately <span class="bold">drive growth</span>.</p>
+            <p>Let's work together to turn your ideas into impactful solutions that help your business thrive!</p>
+    
+            <h3>Process</h3>
+            <ol class="process">
+                <li>
+                    <h4>Consultation</h4>
+                    <span class="process-point">Our journey starts with a friendly conversation where we'll explore your ideas and define the <span class="bold">goals</span> for your project. This is where we get on the same page about what you envision.</span>
+                </li>
+                <li>
+                    <h4>Proposal & Contract</h4>
+                    <span class="process-point">Next, I'll present a detailed project proposal, complete with a visual mock-up of your new site or app. Together, we'll finalize the <span class="bold">plan of action</span> to bring your vision to life.</span>
+                </li>
+                <li>
+                    <h4>Creation</h4>
+                    <span class="process-point">As I design and build your project, you'll receive <span class="bold">regular updates</span>, so you're always in the loop. Your feedback is key as we move from concept to reality.</span>
+                </li>
+                <li>
+                    <h4>Launch & Support</h4>
+                    <span class="process-point">When your project is ready to go live, I'll ensure everything runs smoothly. Plus, you'll have <span class="bold">peace of mind</span> knowing that ongoing support is available whenever you need it.</span>
+                </li>
+            </ol>
+        </div>
     </section>
 
     <div class="divider-2"></div>
