added .inner-container class to top of .my-work @ 720px

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
     <div class="divider-2"></div>
 
     <section class="container my-work">
-        <h2>See some of my work</h2>
-        <p>Here are some of my <span class="bold">websites</span> and <span class="bold">applications</span>.</p>
-        <p> Click to visit them!</p>
+        <div class="inner-container">
+            <h2>See some of my work</h2>
+            <p>Here are some of my <span class="bold">websites</span> and <span class="bold">applications</span>.</p>
+            <p> Click to visit them!</p>
+        </div>
+
         <section class="work-buttons">
             <button id="web-btn" type="button">SEE WEBSITES</button>
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
