added .inner-container class to .pitch @ 720px

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <div class="divider-1"></div>
 
     <section class="container pitch">
-        <h2>Transform Your Online Presence with a Personal Touch</h2>
-        <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web — it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
-        <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new <span class="bold">website</span> or <span class="bold">application</span> built from the ground up, or a refresh to make your current site or app <span class="bold">mobile-friendly</span> and <span class="bold">accessible</span>, I'm here to bring your vision to life.</p>
-        <p>Let’s create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
+        <div class="inner-container">
+            <h2>Transform Your Online Presence with a Personal Touch</h2>
+            <p>Are you confident that your website or application is working its hardest for you? In today’s digital age, your online presence should be more than just a place on the web — it should be a powerful tool that draws in potential customers and keeps them engaged, no matter what device they're using.</p>
+            <p>I specialize in helping small businesses and individuals stand out online. Whether you need a brand-new <span class="bold">website</span> or <span class="bold">application</span> built from the ground up, or a refresh to make your current site or app <span class="bold">mobile-friendly</span> and <span class="bold">accessible</span>, I'm here to bring your vision to life.</p>
+            <p>Let’s create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
+        </div>
     </section>
 
     <div class="divider-2"></div>
