added .inner-container class to main @ 720px

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <main class="container">
-        <h1>I'm <span class="bold">Vish</span>, a software engineer specializing in web development.</h1>
-        <p>Let's see how I can help you with your web presence or software development needs.</p>
+        <div class="inner-container">
+            <h1>I'm <span class="bold">Vish</span>, a software engineer specializing in web development.</h1>
+            <p>Let's see how I can help you with your web presence or software development needs.</p>
+        </div>
 
         <section class="social">
             <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vish213/" title="LinkedIn">
