added renderApps() to start building out function to render projects. mocked up html in .project section in #websites

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 
         <section id="websites" class="gallery">
             <h3>--websites--</h3>
+            <section class="project">
+                <div class="screenshot"></div>
+                <h4>Movies Watchlist</h4>
+                <div>
+                    <div class="visit-site">Visit site</div>
+                    <div class="view-code">View code</div>
+                </div>
+                <section class="project-info">
+                    <p class="project-desc">Uses the OMDB (Online Movie Database) API to get movie info from user searches. Users can add movies to or remove movies from a personal watchlist. Includes pagination for more results.</p>
+                    <div class="stack"></div>
+                </section>
+            </section>
         </section>
     
         <section id="applications" class="hidden">
