styled view/visit buttons

--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
             <section class="project">
                 <div class="screenshot"></div>
                 <h4>Movies Watchlist</h4>
-                <div>
-                    <div class="visit-site">Visit site</div>
-                    <div class="view-code">View code</div>
+                <div class="project-buttons">
+                    <div class="visit-site">
+                        <span class="visit-icon">&#x2BC8;</span>
+                        Visit site
+                    </div>
+                    <div class="view-code">
+                        <i class="fab fa-github"></i>
+                        View code
+                    </div>
                 </div>
                 <section class="project-info">
                     <p class="project-desc">Uses the OMDB (Online Movie Database) API to get movie info from user searches. Users can add movies to or remove movies from a personal watchlist. Includes pagination for more results.</p>
