added html5, css3, js svg's

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                 </div>
                 <section class="project-info">
                     <p class="project-desc">Uses the OMDB (Online Movie Database) API to get movie info from user searches. Users can add movies to or remove movies from a personal watchlist. Includes pagination for more results.</p>
-                    <div class="stack"></div>
+                    <div class="stack">
+                        <img src="img/html5-color.svg" alt="">
+                        <img src="img/css3-color.svg" alt="">
+                        <img src="img/javascript-color.svg" alt="">
+                    </div>
                 </section>
             </section>
         </section>
