added /img/projects/movies.jpg. styled .screenshot & .project h4

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <section id="websites" class="gallery">
             <h3>--websites--</h3>
             <section class="project">
-                <div class="screenshot"></div>
+                <div>
+                    <img class="screenshot" src="img/projects/movies.jpg" alt="">
+                </div>
                 <h4>Movies Watchlist</h4>
                 <div class="project-buttons">
                     <div class="visit-site">
