revised .project layout

--- a/index.html
+++ b/index.html
@@ -65,25 +65,27 @@
                 <div>
                     <img class="screenshot" src="img/projects/movies.jpg" alt="">
                 </div>
-                <h4>Movies Watchlist</h4>
-                <div class="project-buttons">
-                    <div class="visit-site">
-                        <span class="visit-icon">&#x2BC8;</span>
-                        Visit site
+                <div class="inner-project-container">
+                    <h4>Movies Watchlist</h4>
+                    <div class="project-buttons">
+                        <div class="visit-site">
+                            <span class="visit-icon">&#x2BC8;</span>
+                            Visit site
+                        </div>
+                        <div class="view-code">
+                            <i class="fab fa-github"></i>
+                            View code
+                        </div>
                     </div>
-                    <div class="view-code">
-                        <i class="fab fa-github"></i>
-                        View code
-                    </div>
+                    <section class="project-info">
+                        <p class="project-desc">Uses the OMDB (Online Movie Database) API to get movie info from user searches. Users can add movies to or remove movies from a personal watchlist. Includes pagination for more results.</p>
+                        <div class="stack">
+                            <img src="img/html5-color.svg" alt="">
+                            <img src="img/css3-color.svg" alt="">
+                            <img src="img/javascript-color.svg" alt="">
+                        </div>
+                    </section>
                 </div>
-                <section class="project-info">
-                    <p class="project-desc">Uses the OMDB (Online Movie Database) API to get movie info from user searches. Users can add movies to or remove movies from a personal watchlist. Includes pagination for more results.</p>
-                    <div class="stack">
-                        <img src="img/html5-color.svg" alt="">
-                        <img src="img/css3-color.svg" alt="">
-                        <img src="img/javascript-color.svg" alt="">
-                    </div>
-                </section>
             </section>
         </section>
     
