--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
     
         <section id="applications" class="hidden">
-            <h3>--applications--</h3>
+            <!-- <h3>--applications--</h3> -->
         </section>
     </section>
 
