calling renderSites() from webBtn event listener and on page load (websites load by default)

--- a/index.html
+++ b/index.html
@@ -59,13 +59,9 @@
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
-        <section id="websites" class="gallery">
-            <h3>--websites--</h3>
-        </section>
+        <section id="websites" class="gallery"></section>
     
-        <section id="applications" class="hidden">
-            <!-- <h3>--applications--</h3> -->
-        </section>
+        <section id="applications" class="hidden"></section>
     </section>
 
     <div class="divider-1"></div>
