--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="inner-container">
             <h2>See some of my work</h2>
             <p>Here are some of my <span class="bold">websites</span> and <span class="bold">applications</span>.</p>
-            <p> Click to visit them!</p>
+            <p> Click on an image to visit the site!</p>
         </div>
 
         <section class="work-buttons">
