enabled netlify forms submission for contact-form

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p>Got some great food recommendations? I'm all ears — and taste buds!</p>
             <p>I'm also open to new clients, projects, and opportunities. If your company is looking to grow its software engineering team, let's connect!</p>
             
-            <form action="" id="contact-form">
+            <form id="contact-form" name="contact-form" method="POST" data-netlify="true">
                 <div class='form-half'>
                     <label for='name'>NAME</label>
                     <input
