added /img/jesus-curiel.jpg. applied it to .about-me as background

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="divider-2"></div>
 
-    <section class="container about-me">
+    <section class="container about-me bk-about-me">
         <div class="inner-container">
             <div class="img-container">
                 <img src="img/vish.jpg" alt="Vish Singh">
