added /img/jesus-curiel.jpg. added text-shadow to text in .about-me via .bk-reading p. added .divider-3 with transparent diagonal so .about-me can scroll past fixed background

--- a/index.html
+++ b/index.html
@@ -97,19 +97,23 @@
 
     <div class="divider-2"></div>
 
-    <section class="container about-me bk-about-me">
+    <section class="container about-me">
         <div class="inner-container">
             <div class="img-container">
                 <img src="img/vish.jpg" alt="Vish Singh">
             </div>
             <h2>I'm a software engineer based in Los Angeles, originally from New York</h2>
-            <p>With a background in healthtech, I've spent most of my career designing innovative electronic medical record software for long-term care facilities.</p>
-            <p>I love the creative side of building websites and web apps, especially when it comes to user interfaces.</p>
-            <p>Outside of work, I'm a dad joke enthusiast, an electric bass player (not a guitarist!), and a fan of live shows—from experimental jazz to extreme metal. I'm also a foodie exploring LA's vibrant scene, though I miss the tastes of NY. When I'm not coding, you might find me diving into a good sci-fi novel or attempting a 5k.</p>
+            <div class="bk-reading">
+                <p>With a background in healthtech, I've spent most of my career designing innovative electronic medical record software for long-term care facilities.</p>
+                <p>I love the creative side of building websites and web apps, especially when it comes to user interfaces.</p>
+                <p>Outside of work, I'm a dad joke enthusiast, an electric bass player (not a guitarist!), and a fan of live shows—from experimental jazz to extreme metal. I'm also a foodie exploring LA's vibrant scene, though I miss the tastes of NY. When I'm not coding, you might find me diving into a good sci-fi novel or attempting a 5k.</p>
+            </div>
         </div>
     </section>
 
-    <div class="divider-1"></div>
+    <div class="divider-3"></div>
+    
+    <div class="bk-about-me"></div>
 
     <section class="container contact">
         <div class="inner-container">
