added .divider-4 with transparent diagonal so .contact can scroll past fixed background

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
     
     <div class="bk-about-me"></div>
 
+    
     <section class="container contact">
+        <div class="divider-4"></div>
         <div class="inner-container">
             <h2>Get in touch</h2>
             <p>Got some great food recommendations? I'm all ears — and taste buds!</p>
