updated footer text. changed height of .bk-about-me

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="divider-4"></div>
     
-    <div class="bk-about-me">
+    <div class="container bk-about-me">
         <div class="inner-container bk-reading">
             <h2>Get in touch</h2>
             <p>Got some great food recommendations? I'm all ears — and taste buds!</p>
@@ -171,7 +171,7 @@
 
     <div class="divider-3"></div>
 
-    <footer>© 2024, Vish Singh</footer>
+    <footer>© 2024, Vish Singh. All rights reserved.</footer>
 
     <script src="index.js"></script>
 </body>
