added parallax background to main. added .divider-6. removed images files that aren't in use

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/788b6b1728.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="main-bk"></div>
+
     <main class="container">
         <div class="inner-container">
             <h1>I'm <span class="bold">Vish</span>, a software engineer specializing in web development.</h1>
@@ -34,7 +36,7 @@
         </section>
     </main>
 
-    <div class="divider-1"></div>
+    <div class="divider-6"></div>
 
     <section class="container pitch">
         <div class="inner-container">
