added .carousel-container and .carousel-controls to #websites. commented out initial #websites render on pageload

--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
-        <section id="websites" class="gallery"></section>
+        <section id="websites" class="gallery">
+            <section class="carousel-container">
+                <div class="slide">1</div>
+                <div class="slide">2</div>
+                <div class="slide">3</div>
+            </section>
+
+            <section class="carousel-controls">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </section>
+        </section>
     
         <section id="applications" class="hidden"></section>
     </section>
