--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 <div class="slide">1</div>
                 <div class="slide">2</div>
                 <div class="slide">3</div>
+
+                <a class="prev">&#10094;</a>
+                <a class="next">&#10095;</a>
             </section>
 
             <section class="carousel-controls">
