--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <div class="slide">2</div>
                 <div class="slide">3</div>
 
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+                <a class="next" onclick="changeSlide(1)">&#10095;</a>
             </section>
 
             <section class="carousel-controls">
