--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </section>
 
         <section id="websites" class="gallery">
-            <section class="carousel-container">
-                <div class="slide">1</div>
+            <section id="carousel" class="carousel-container">
+                <!-- <div class="slide">1</div>
                 <div class="slide">2</div>
-                <div class="slide">3</div>
+                <div class="slide">3</div> -->
 
                 <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
                 <a class="next" onclick="changeSlide(1)">&#10095;</a>
