--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
                 <div class="slide">2</div>
                 <div class="slide">3</div> -->
 
-                <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-                <a class="next" onclick="changeSlide(1)">&#10095;</a>
             </section>
-
+            
             <section class="carousel-controls">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+                <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
+                <div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+                <a class="next" onclick="changeSlide(1)">next &#10095;</a>
             </section>
         </section>
     
