rendering dots programmatically

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             
             <section class="carousel-controls">
                 <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
-                <div>
+                <div id="dot-container">
+                    <!-- <span class="dot"></span>
                     <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
+                    <span class="dot"></span> -->
                 </div>
                 <a class="next" onclick="changeSlide(1)">next &#10095;</a>
             </section>
