--- a/index.html
+++ b/index.html
@@ -62,20 +62,11 @@
         </section>
 
         <section id="websites" class="gallery">
-            <section id="carousel" class="carousel-container">
-                <!-- <div class="slide">1</div>
-                <div class="slide">2</div>
-                <div class="slide">3</div> -->
-
-            </section>
+            <section id="carousel" class="carousel-container"></section>
             
             <section class="carousel-controls">
                 <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
-                <div id="dot-container">
-                    <!-- <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span> -->
-                </div>
+                <div id="dot-container"></div>
                 <a class="next" onclick="changeSlide(1)">next &#10095;</a>
             </section>
         </section>
